--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 					</header>
 					<div class="box">
 						<form method="post" action="#">
-							<center><p>Email: e_degen@outlook.com<br/>Cell Phone: (567)204-9197<br/>Discord: Zentail#8107<br/><a href="https://www.linkedin.com/in/ethandegen/">LinkedIn</p></center>
+							<center><p>Email: e_degen@outlook.com<br/>Cell Phone: By Request<br/>Discord: Zentail#8107<br/><a href="https://www.linkedin.com/in/ethandegen/">LinkedIn</p></center>
 						</form>
 					</div>
 				</section>
