--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Ethan Degen's Portfolio</a></h1>
+					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -28,6 +28,9 @@
 									<li><a href="winter.html">Winter Scene</a></li>
 								</ul>
 							</li>
+							<li><a href="resume.html">Resume</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="https://www.linkedin.com/in/ethandegen/">Linkedin</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -39,7 +42,7 @@
 						<p>Thanks for clicking to learn more about me!</p>
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/Lima_Ohio.jpg" alt="" /></span>
+						<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 						<h3>Where I'm From</h3>
 						<p>
 							I'm from a small city in Northwestern Ohio where I've lived my entire life. I've traveled around the US and some of my earliest childhood memories were late nights in the RV playing games like Pokemon, Fire Emblem, Fallout, Elder Scrolls, and Mass Effect. I've helped out at the family business from a young age where I've operated heavy machinery and worked since I was around 9 years old.
@@ -56,7 +59,6 @@
                             I realized that some of my favorite game series at this point like Fallout, Elder Scrolls, and Arma had diverse modding communities that made tons of content and I had to be a part of it. I started by talking with mod teams at community events on different forums like ModDB, Steam, and Reddit where I'd try to get into meetings where I could make my design ideas heard. This is where I started to learn my first lessons in design because as a child I didn't have a concept of how difficult it was to make mods and games. I realized pretty fast that I was in over my head but I dug into Arma III and started creating scenarios, operations, and cosmetic mods for Arma's player communities. 
                             My Arma modding days lasted until college when I started going to school for Computer Science so I could learn to program the games I'd wanted to design my whole life. I went to Bowling Green State University for a while but I couldn't stand the program and one day while I was playing with my WoW guild I heard someone talk about a game design college in Ohio. This is how I found Shawnee State University and I transferred immediately into their game design degree.
 						</p>
-						</div>
 					</div>
 				</section>
 
