--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Ethan Degen's Portfolio</a></h1>
+					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -28,6 +28,9 @@
 									<li><a href="winter.html">Winter Scene</a></li>
 								</ul>
 							</li>
+							<li><a href="resume.html">Resume</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="https://www.linkedin.com/in/ethandegen/">Linkedin</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -49,7 +52,7 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/BlastMySideOverview.png" alt="" /></span>
 								<h3>B.L.A.S.T.</h3>
-								<p>Senior project that was made by a team of artists and engineers from Shawnee State University. I was the primary system designer, level designer, and engineering lead for the project.</p>
+								<p>Senior project that was made by a team of artists and engineers from Shawnee State University. I was the primary gameplay designer, system designer, and engineering lead for the project.</p>
 								<ul class="actions special">
 									<li><a href="blast.html" class="button alt">Learn More</a></li>
 								</ul>
@@ -62,7 +65,7 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/TP6.png" alt="" /></span>
 								<h3>Turning Point</h3>
-								<p>2022 Global Game Jam where I lead a team of 5 engineers and 1 artist. The game jam theme was Duality and my group had little to no experience with Unreal.</p>
+								<p>2022 Global Game Jam where I lead a team of 5 engineers and 1 artist in creating a game I designed for the jam. The game jam theme was Duality and my group had little to no experience with Unreal.</p>
 								<ul class="actions special">
 									<li><a href="turningpoint.html" class="button alt">Learn More</a></li>
 								</ul>
