--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Contact Me</title>
+		<title>About Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,16 +36,18 @@
 				</header>
 
 			<!-- Main -->
-				<section id="main" class="container medium">
+				<section id="main" class="container">
 					<header>
-						<h2>Contact Me</h2>
-						<p>Feel free to reach out to me with any questions you have.</p>
+						<h2>Resume</h2>
+						<p>Here's a .docx download if you'd like to save it.</p>
 					</header>
+					<ul class="actions special">
+						<li><a href="Ethan Degen's Resume.docx" class="button">Download Resume</a></li>
+					</ul>
 					<div class="box">
-						<form method="post" action="#">
-							<center><p>Email: e_degen@outlook.com<br/>Cell Phone: By Request<br/>Discord: Zentail#8107<br/><a href="https://www.linkedin.com/in/ethandegen/">LinkedIn</p></center>
-						</form>
+						<iframe style="width:1160px; height:800px;" src="Ethan Degen Resume.pdf"></iframe>
 					</div>
+					
 				</section>
 
 			<!-- Footer -->
@@ -57,7 +59,6 @@
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
-
 		</div>
 
 		<!-- Scripts -->
