--- a/turningpoint.html
+++ b/turningpoint.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Ethan Degen's Portfolio</a></h1>
+					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -28,6 +28,9 @@
 									<li><a href="winter.html">Winter Scene</a></li>
 								</ul>
 							</li>
+							<li><a href="resume.html">Resume</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="https://www.linkedin.com/in/ethandegen/">Linkedin</a></li>
 						</ul>
 					</nav>
 				</header>
