--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
 						<p>Here's a .docx download if you'd like to save it.</p>
 					</header>
 					<ul class="actions special">
-						<li><a href="Ethan Degen's Resume.docx" class="button">Download Resume</a></li>
+						<li><a href="Ethan Degen Resume.docx" class="button">Download Resume</a></li>
 					</ul>
 					<div class="box">
 						<iframe style="width:1160px; height:800px;" src="Ethan Degen Resume.pdf"></iframe>
