--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/BlastMySideOverview.png" alt="" /></span>
 								<h3>B.L.A.S.T.</h3>
-								<p>Senior project that was made by a team of artists and engineers from Shawnee State University. I was the primary gameplay designer, system designer, and engineering lead for the project.</p>
+								<p>The senior project was developed by a team of artists and engineers from Shawnee State University. I was the project's primary level designer, gameplay designer, system designer, and programming lead.</p>
 								<ul class="actions special">
 									<li><a href="blast.html" class="button alt">Learn More</a></li>
 								</ul>
@@ -65,7 +65,7 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/TP6.png" alt="" /></span>
 								<h3>Turning Point</h3>
-								<p>2022 Global Game Jam where I lead a team of 5 engineers and 1 artist in creating a game I designed for the jam. The game jam theme was Duality and my group had little to no experience with Unreal.</p>
+								<p>2022 Global Game Jam, where I led a team of 5 engineers and 1 artist in creating a game I designed for the jam. The game jam theme was Duality, and my group had little experience with Unreal.</p>
 								<ul class="actions special">
 									<li><a href="turningpoint.html" class="button alt">Learn More</a></li>
 								</ul>
@@ -76,7 +76,7 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/Winter Thumbnail.png" alt="" /></span>
 								<h3>Winter Scene</h3>
-								<p>Over my 2021-2022 Winter Break I set out to get more experience making levels in Unreal. I downloaded free assets from the marketplace and made a wooded area meant for games in the FPS, Action, MMO, or Survival genres.</p>
+								<p>Over my 2021-2022 Winter Break, I set out to get more experience making levels in Unreal. I downloaded free assets from the marketplace and made a wooded area meant for games in the FPS, Action, MMO, or Survival genres.</p>
 								<ul class="actions special">
 									<li><a href="winter.html" class="button alt">Learn More</a></li>
 								</ul>
