--- a/turningpoint.html
+++ b/turningpoint.html
@@ -50,8 +50,8 @@
 								</p>
 								<h3>What I Learned</h3>
 								<p>
-									It's hard to rush ideas through production in 2 days but we took 4 hours for preproduction on the first day which helped us stay on the same page throughout the entire jam and everyone was thankful that we did it. I found that checking in on people periodically 
-                                    helps them open up and ask more questions versus waiting for them to come and ask. Our game used the jam's theme of Duality by having the player run through the level during the first half of the game avoiding the enemies until they come across the final area 
+									It's hard to rush ideas through production in 2 days, but we took 4 hours for preproduction on the first day, which helped us stay on the same page throughout the entire jam, and everyone was thankful that we did it. I found that checking in on people 
+                                    helps them open up and ask more questions versus waiting for them to come and ask. Our game used the jam's theme of Duality by having the player run through the level during the first half of the game, avoiding the enemies until they come across the final area 
                                     where they collect a power-up that lets them turn on the enemies hunting them. The player then runs back through the level killing the enemies to make it back to the start.
 								</p>
 								<h3>Assets</h3>
