--- a/winter.html
+++ b/winter.html
@@ -46,14 +46,14 @@
 							<div class="row-6 row-12-mobilep">
 								<h3>The Project's Goal</h3>
 								<p>
-									I started this project to learn how to populate exterior spaces with props so it doesn't feel empty, worked with Unreal's landscape tool to learn how to sculpt a flat level so it doesn't feel like an untouched plane, and learned how to make it feel apart of a larger world 
-									using assets for the surrounding land and sky.
+									I started this project to learn how to populate exterior spaces with props, so it doesn't feel empty, worked with Unreal's landscape tool to learn how to sculpt a flat level, so it doesn't feel like an untouched plane, and learned how to make it feel apart of a larger world 
+                                    using assets for the surrounding land and sky.
 								</p>
 								<h3>What I Learned</h3>
 								<p>
-									It can take weeks of iterations to make a level that doesn't feel empty or completely flat. I found myself working on the landscape for a lot longer than I had planned at first. The more I moved in the world I would found more areas that felt barren, overpopulated, too flat, or with taller hills than I liked. 
-                                    Every time I made a major change in the level I would run around the world from the player's perspective to see if my changes were ok. Doing this along with placing cameras in the world helped me find the sweet spots for my background meshes and how much fog I wanted. Finding the right fog levels came 
-                                    down to simply tweaking the density and moving around in the level but I found it a little harder to get my surrounding mountains to a point they felt alright. The most useful strategy I had was placing cameras so I could see where I was working from different angles.
+									It can take weeks of iterations to make a level that doesn't feel empty or completely flat. So I found myself working on the landscape for much longer than I had planned. The more I moved in the world, found more areas that felt barren, overpopulated, too flat, or with taller hills than I liked. 
+                                    Every time I made a significant change in the level, I would run around the world from the player's perspective to see if my changes were ok. Doing this and placing cameras in the world helped me find the sweet spots for my background meshes and how much fog I wanted. Finding the correct fog levels came 
+                                    down to simply tweaking the density and moving around in the level, but I found it a little harder to get my surrounding mountains to a point they felt alright. The most helpful strategy was placing cameras so I could see where I was working from different angles.
 									
 								</p>
 								<h3>Assets</h3>
