--- a/about.html
+++ b/about.html
@@ -16,13 +16,14 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
+					<h1><a href="index.html">Ethan Degen Programmer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
+									<li><a href="arma.html">17th Aux Mod</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
@@ -49,15 +50,15 @@
 						</p>
 						<h3>Why I Develop</h3>
 						<p>
-							Working in construction growing up gave me an appreciation for how hard the generations prior worked to provide me with the choices I have today. However, I didn't want to waste the chance doing something I hate, so I decided to pursue my dream of working in the game industry. 
+							Working in construction growing up gave me an appreciation for how hard the generations prior worked to provide me with the choices I have today. However, I didn't want to waste the chance doing something I hate, so I decided to try and pursue my dream of working in the game industry. 
                             I've played games since I was young when my health wouldn't let me play sports, but games didn't click until I tried Star Wars Galaxies for the first time in 2004. After I logged in and saw the vast open world, I could have an effect just like Han and Chewie; I was hooked. After I realized how fun games could be, I played everything I could get my hands on but nothing compared to the intricate world of MMORPGs or the immersive feel of FPSs. 
                             I had a wonderful experience growing up in guilds online with my brother. We grew up going to school and work, but then we'd come home to these communities where we were able to constantly debate about what we would do to make our favorite games better. When I became older, I realized I wanted to make games for other people to enjoy and make lifelong friends as I did.
 						</p>
 						<h3>How I started</h3>
 						<p>
-							My first journey into making content for games started when I found forge mode on Halo 3. Halo was the first game to pull me away from MMOs on my PC, and I would spend hundreds of hours on my Xbox making maps for my brother and his friends to play. After this, I ventured into creating games for school projects using RPGMaker, but I stopped using it after I realized how little fun I had writing dialog after I was done making my levels and combat encounters. Around this time in middle school, I discovered the DayZ mod for Arma II and realized that you could create content for existing games the same way I used to for Halo 3. After this, I started modding every game I could get my hands on to see what people were creating for these games that weren't part of the base experience. 
-                            I realized that some of my favorite game series at this point, like Fallout, Elder Scrolls, and Arma, had diverse modding communities that made tons of content, and I had to be a part of it. So I started by talking with mod teams at community events on different forums like ModDB, Steam, and Reddit, where I'd try to get into meetings where I could hear my design ideas. This is where I started to learn my first lessons in design because, as a child, I didn't have a concept of how difficult it was to make mods and games. I realized quickly that I was in over my head, but I dug into Arma III and started creating scenarios, operations, and cosmetic mods for Arma's player communities. 
-                            My Arma modding days lasted until college, when I started going to school for Computer Science so I could learn to program the games I'd wanted to design my whole life. I went to Bowling Green State University for a while, but I was not too fond of the program, and one day while playing with my WoW guild, I heard someone talk about a game design college in Ohio. So I found Shawnee State University and immediately transferred to their game design degree.
+							My first journey into making content for games started when I found forge mode on Halo 3. Halo was the first game to pull me away from MMOs on my PC, and I would spend hundreds of hours on my Xbox making maps for my brother and his friends to play. After this, I ventured into creating games for school projects using RPGMaker, but I stopped using it after I realized how little fun I had writing dialog after I was done making my levels and combat encounters. Around this time in middle school, I discovered the DayZ mod for Arma II and realized that you could create content for existing games the same way I used to for Halo 3. After this, I started learning programming and modding every game I could get my hands on to see what people were creating for these games that weren't part of the base experience. 
+                            I realized that some of my favorite game series at this point, like Fallout, Elder Scrolls, and Arma, had diverse modding communities that made tons of content, and I had to be a part of it. So I started by talking with mod teams at community events on different forums like ModDB, Steam, and Reddit, where I'd try to get into meetings where I could hear my design ideas and offer my programming skills. This is where I started to learn my first lessons in project scope because, as a child, I didn't have a concept of how difficult it was to make complex programs like mods and games. I realized quickly that I was in over my head, but I dug into Arma III and started creating scenarios, operations, and mods for Arma player communities that I was in. 
+                            My Arma modding days lasted until college, when I started going to school for Computer Science so I could learn how to program the games in a structured environment. I went to Bowling Green State University for a while, but I was not too fond of the program, and one day while playing with my WoW guild, I heard someone talk about a game design college in Ohio. So I found Shawnee State University and immediately transferred to their game engineering degree.
 						</p>
 					</div>
 				</section>
