--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<h3>17th Aux Mod</h3>
 								<p>Arma 3 Mod to add custom armor.</p>
 								<ul class="actions special">
-									<li><a href="blast.html" class="button alt">Learn More</a></li>
+									<li><a href="arma.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
