--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Ethan Degen Programmer</a></h1>
+					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -66,7 +66,7 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/cws1.png" alt="" /></span>
 								<h3>Ghosts of Tabor</h3>
-								<p>Combat Waffle Studio's first title where I worked as a Project Manager leading 15 developers. Anymore specifics are under NDA.</p>
+								<p>Combat Waffle Studio's first title where I worked as a Project Manager leading 15 developers.</p>
 								<ul class="actions special">
 									<li><a href="https://ghostsoftabor.com/" class="button alt">Learn More</a></li>
 								</ul>
