--- a/turningpoint.html
+++ b/turningpoint.html
@@ -64,12 +64,12 @@
 					</div>
 					<div class="box alt">
 						<div class="row gtr-50 gtr-uniform">
-							<div class="col-4"><span class="image fit"><a href="images/TP1.png"><img src="images/TP1.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/TP2.png"><img src="images/TP2.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/TP3.png"><img src="images/TP3.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/TP4.png"><img src="images/TP4.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/TP5.png"><img src="images/TP5.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/TP6.png"><img src="images/TP6.png" alt="" style="width:400px;height:200px"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/TP1.png"><img src="images/TP1.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/TP2.png"><img src="images/TP2.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/TP3.png"><img src="images/TP3.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/TP4.png"><img src="images/TP4.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/TP5.png"><img src="images/TP5.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/TP6.png"><img src="images/TP6.png" alt="" style="width:100%;height:100%"></a></span></div>
 						</div>
 					</div>
 				</section>
