--- a/arma.html
+++ b/arma.html
@@ -52,12 +52,12 @@
 					<div class="box alt">
 						<h3>Gallery</h3>
 						<div class="row gtr-50 gtr-uniform">
-							<div class="col-4"><span class="image fit"><a href="images/arma2.png"><img src="images/arma2.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/arma3.png"><img src="images/arma3.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/arma4.png"><img src="images/arma4.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/arma5.png"><img src="images/arma5.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/arma6.png"><img src="images/arma6.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/arma7.png"><img src="images/arma7.png" alt="" style="width:400px;height:200px"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/arma2.png"><img src="images/arma2.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/arma3.png"><img src="images/arma3.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/arma4.png"><img src="images/arma4.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/arma5.png"><img src="images/arma5.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/arma6.png"><img src="images/arma6.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/arma7.png"><img src="images/arma7.png" alt="" style="width:100%;height:100%"></a></span></div>
 						</div>
 					</div>
 				</section>
