--- a/winter.html
+++ b/winter.html
@@ -66,12 +66,12 @@
 					</div>
 					<div class="box alt">
 						<div class="row gtr-50 gtr-uniform">
-							<div class="col-4"><span class="image fit"><a href="images/Winter 1.png"><img src="images/Winter 1.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/Winter 2.png"><img src="images/Winter 2.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/Winter 3.png"><img src="images/Winter 3.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/Winter 4.png"><img src="images/Winter 4.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/Winter 5.png"><img src="images/Winter 5.png" alt="" style="width:400px;height:200px"></a></span></div>
-							<div class="col-4"><span class="image fit"><a href="images/Winter 6.png"><img src="images/Winter 6.png" alt="" style="width:400px;height:200px"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/Winter 1.png"><img src="images/Winter 1.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/Winter 2.png"><img src="images/Winter 2.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/Winter 3.png"><img src="images/Winter 3.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/Winter 4.png"><img src="images/Winter 4.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/Winter 5.png"><img src="images/Winter 5.png" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/Winter 6.png"><img src="images/Winter 6.png" alt="" style="width:100%;height:100%"></a></span></div>
 						</div>
 					</div>
 				</section>
