--- a/arma.html
+++ b/arma.html
@@ -23,6 +23,7 @@
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
 									<li><a href="arma.html">17th Aux Mod</a></li>
+                                    <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
@@ -42,8 +43,16 @@
 						<p><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2929699466">Steam Page</a></p>
 					</header>
 					<div class="box">
-						<span class="image featured"><a href="images/arma1.png"></a><img src="images/arma1.png" alt="" /></span>
-						<h3>What is the Aux Mod.</h3>
+						<span class="image featured"><a href="images/arma1.png"></a><img src="images/arma1.png" alt="" /></span>					
+						<h3>Summary of my Work</h3>
+						<ol>
+							<li>Created and added custom textures for infantry armor, vehicles, and aircraft</li>
+
+							<li>Leading small team of 3-4 in the creation of textures</li>
+								
+							<li>Developed efficient C++ code in Arma's custom engine that doesn't have much documentation</li>
+						</ol>
+						<h3>What is the Aux Mod</h3>
 						<p>
 							The 17th Aux Mod is a mod that I created to make custom armor, weapons, and vehicles for the Arma 3 group that I play with. It has quickly grown to more than just adding in cosmetic assets, and I'm now editing gameplay systems so they can fit the needs of my group. My codebase has grown considerably, and sadly there isn't a library of 
                             all the functions I need to access to add and modify systems in the game. As a result, most of my spare time is spent unpacking game files to learn what different methods and functions do and how to use them effectively. I do this because I enjoy watching and hearing my friend's reactions whenever I add something interesting for us to use in-game. 
