--- a/turningpoint.html
+++ b/turningpoint.html
@@ -24,6 +24,7 @@
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
 									<li><a href="arma.html">17th Aux Mod</a></li>
+                                    <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
@@ -49,6 +50,18 @@
 								<p>
 									For the game jam, I wanted to make a linear level with unique feeling areas while having a limited set of assets and improve my leadership and management skills.
 								</p>
+								<h3>Summary of my Work</h3>
+								<ol>
+									<li>Created the map and environment using Unreals landscape and foliage tools</li>
+
+									<li>Made AI encounters by placing them on the map at varying intervals so the player didn't encounter them all at once while still maintaining a steady build-up</li>
+										
+									<li>Managed the 6 developers who worked on the game jam</li>
+
+									<li>Designed mechanics to make them fit in with the theme of Duality. I have the player start with any weapons but slightly faster than the enemies that way they're 
+										running from them throughout the level. Once they reach the end of the path they find a weapon and the game switches from a chase sequence to a power fantasy where the
+										player can hunt all the enemies.</li>
+								</ol>
 								<h3>What I Learned</h3>
 								<p>
 									It's hard to rush ideas through production in 2 days, but we took 4 hours for preproduction on the first day, which helped us stay on the same page throughout the entire jam, and everyone was thankful that we did it. I found that checking in on people 
