--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
 									<li><a href="arma.html">17th Aux Mod</a></li>
+                                    <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
