--- a/winter.html
+++ b/winter.html
@@ -24,6 +24,7 @@
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
 									<li><a href="arma.html">17th Aux Mod</a></li>
+                                    <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
@@ -49,6 +50,12 @@
 								<p>
 									I started this project to learn how to populate exterior spaces with props, so it doesn't feel empty, worked with Unreal's landscape tool to learn how to sculpt a flat level, so it doesn't feel like an untouched plane, and learned how to make it feel apart of a larger world 
                                     using assets for the surrounding land and sky.
+								</p>
+								<h3>Summary of my Work</h3>
+								<p>
+									Made a level that was inspired by a battle map from the Mount and Blade series. I had to consider how infantry, archers, and cavalry would be forced to move through the level.
+									I used this to practice with unreals landscape and foliage tools, I made the map heavily forested to signify a focus on infantry combat. A large amount of trees make the environment 
+									unpleasant for archers and calvary.
 								</p>
 								<h3>What I Learned</h3>
 								<p>
