--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<h3>Ghosts of Tabor</h3>
 								<p>Combat Waffle Studio's first title where I worked as a Project Manager leading 15 developers.</p>
 								<ul class="actions special">
-									<li><a href="https://ghostsoftabor.com/" class="button alt">Learn More</a></li>
+									<li><a href="tabor.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
