--- a/tabor.html
+++ b/tabor.html
@@ -23,9 +23,9 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
-									<li><a href="arma.html">17th Aux Mod</a></li>
                                     <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
+									<li><a href="arma.html">17th Aux Mod</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
 								</ul>
@@ -71,6 +71,17 @@
 							</div>
 						</div>
 					</div>
+					<div class="box alt">
+						<h3>Gallery</h3>
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-4"><span class="image fit"><a href="images/cws2.jpg"><img src="images/cws2.jpg" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/cws3.jpg"><img src="images/cws3.jpg" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/cws4.jpg"><img src="images/cws4.jpg" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/cws5.jpg"><img src="images/cws5.jpg" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/cws6.jpg"><img src="images/cws6.jpg" alt="" style="width:100%;height:100%"></a></span></div>
+							<div class="col-4"><span class="image fit"><a href="images/cws7.jpg"><img src="images/cws7.jpg" alt="" style="width:100%;height:100%"></a></span></div>
+						</div>
+					</div>
 				</section>
 
 			<!-- Footer -->
@@ -80,6 +91,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Disclosure: The images provided above are promotional images from Combat Waffle's Twitter taken by their media team.</li>
 				</ul>
 			</footer>
 		</div>
