--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
-									<li><a href="arma.html">17th Aux Mod</a></li>
                                     <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
+									<li><a href="arma.html">17th Aux Mod</a></li>
 									<li><a href="turningpoint.html">Turning Point</a></li>
 									<li><a href="winter.html">Winter Scene</a></li>
 								</ul>
@@ -52,11 +52,11 @@
 					<div class="row">
 						<div class="col-6-wide col-12-wide">
 							<section class="box special">
-								<span class="image featured"><img src="images/arma6.png" alt="" /></span>
-								<h3>17th Aux Mod</h3>
-								<p>Arma 3 Mod to add custom armor.</p>
+								<span class="image featured"><img src="images/cws1.png" alt="" /></span>
+								<h3>Ghosts of Tabor</h3>
+								<p>Combat Waffle Studio's first title where I designed gameplay systems, levels, and worked as a Project Manager leading 15 developers.</p>
 								<ul class="actions special">
-									<li><a href="arma.html" class="button alt">Learn More</a></li>
+									<li><a href="tabor.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
@@ -65,22 +65,22 @@
 					<div class="row">
 						<div class="col-6 col-12-narrower">
 							<section class="box special">
-								<span class="image featured"><img src="images/cws1.png" alt="" /></span>
-								<h3>Ghosts of Tabor</h3>
-								<p>Combat Waffle Studio's first title where I worked as a Project Manager leading 15 developers.</p>
+								<span class="image featured"><img src="images/BlastMySideOverview.png" alt="" /></span>
+								<h3>B.L.A.S.T.</h3>
+								<p>The senior project was developed by a team of artists and engineers from Shawnee State University. I was the project's primary level designer, gameplay designer, system designer, and programming lead.</p>
 								<ul class="actions special">
-									<li><a href="tabor.html" class="button alt">Learn More</a></li>
+									<li><a href="blast.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
 
 						<div class="col-6 col-12-narrower">
 							<section class="box special">
-								<span class="image featured"><img src="images/BlastMySideOverview.png" alt="" /></span>
-								<h3>B.L.A.S.T.</h3>
-								<p>The senior project was developed by a team of artists and engineers from Shawnee State University. I was the project's primary level designer, gameplay designer, system designer, and programming lead.</p>
+								<span class="image featured"><img src="images/arma6.png" alt="" /></span>
+								<h3>17th Aux Mod</h3>
+								<p>Arma 3 Mod to add custom armor.</p>
 								<ul class="actions special">
-									<li><a href="blast.html" class="button alt">Learn More</a></li>
+									<li><a href="arma.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 						</div>
