New resume update and current ESO career upload

--- a/eso.html
+++ b/eso.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Me</title>
+		<title>ESO</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,27 +41,39 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Resume</h2>
-						<p>Here's a .pdf & .docx download if you'd like to save it.</p>
+						<h2>Elder Scrolls Online</h2>
+						<p><a href="https://www.elderscrollsonline.com/en-us/home/" class="button alt">Offical Game Site</a></p>
 					</header>
-					<ul class="actions special">
-						<li><a href="Ethan Degen Resume.docx" class="button">Download Resume</a></li>
-					</ul>
 					<div class="box">
-						<iframe style="width:1160px; height:800px;" src="Ethan Degen Resume.pdf"></iframe>
+						<span class="image featured"><a href="images/eso.png"></a><img src="images/eso2.png" alt="" /></span>			
+						<div class="row">
+							<div class="row-6 row-12-mobilep">
+								<h3>Summary of my Work</h3>
+								<ol>
+                                    <li>Created prototype levels and gamemode for internal use</li>
+
+                                    <li>Used in-house scripting tools to create and assist in the creation of gameplay systems,
+										in-game abilities, and item sets</li>
+                                </ol>
+								<h3>What Did I Do</h3>
+								<p>
+                                    I interned under Elder Scrolls Online's Lead Combat designer on combat and PvP. I started by understanding how content is added to a longstanding live service title like Elder Scrolls Online and through this I worked with many different departments on implementing my content for future patches. I'm very excited to go into more detail when it goes live in the future.
+								</p>
+							</div>
+						</div>
 					</div>
-					
 				</section>
 
 			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/ethandegen/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://www.linkedin.com/in/ethandegen/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Disclosure: The images provided above are promotional images from Combat Waffle's Twitter taken by their media team.</li>
+				</ul>
+			</footer>
 		</div>
 
 		<!-- Scripts -->
