--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
+                                    <li><a href="eso.html">Elder Scrolls Online</a></li>
                                     <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="arma.html">17th Aux Mod</a></li>
@@ -52,6 +53,19 @@
 					<div class="row">
 						<div class="col-6-wide col-12-wide">
 							<section class="box special">
+								<span class="image featured"><img src="images/eso.png" alt="" /></span>
+								<h3>Elder Scrolls Online</h3>
+								<p>Elder Scrolls Online is a massively multiplayer online role-playing game (MMORPG) developed by ZeniMax Online Studios.</p>
+								<ul class="actions special">
+									<li><a href="eso.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-6 col-12-narrower">
+							<section class="box special">
 								<span class="image featured"><img src="images/cws1.png" alt="" /></span>
 								<h3>Ghosts of Tabor</h3>
 								<p>Combat Waffle Studio's first title where I designed gameplay systems, levels, and worked as a Project Manager leading 15 developers.</p>
@@ -60,9 +74,7 @@
 								</ul>
 							</section>
 						</div>
-					</div>
 
-					<div class="row">
 						<div class="col-6 col-12-narrower">
 							<section class="box special">
 								<span class="image featured"><img src="images/BlastMySideOverview.png" alt="" /></span>
@@ -96,6 +108,7 @@
 							</section>
 						</div>
 
+						<!--
 						<div class="col-6 col-12-narrower">
 							<section class="box special">
 								<span class="image featured"><img src="images/Winter Thumbnail.png" alt="" /></span>
@@ -106,6 +119,7 @@
 								</ul>
 							</section>
 						</div>
+						-->
 					</div>
 				</section>
 
