--- a/tabor.html
+++ b/tabor.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Winter Level</title>
+		<title>Ghosts of Tabor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,6 +23,7 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Projects</a>
 								<ul>
+                                    <li><a href="eso.html">Elder Scrolls Online</a></li>
                                     <li><a href="tabor.html">Ghosts of Tabor</a></li>
 									<li><a href="blast.html">B.L.A.S.T.</a></li>
 									<li><a href="arma.html">17th Aux Mod</a></li>
