--- a/arma.html
+++ b/arma.html
@@ -15,7 +15,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
+					<h1><a href="index.html">Ethan Degen Programmer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
