--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Ethan Degen Game Designer</a></h1>
+					<h1><a href="index.html">Ethan Degen Programmer</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
